--- a/app/src/main/res/layout/fragment_contacts_list.xml
+++ b/app/src/main/res/layout/fragment_contacts_list.xml
@@ -8,6 +8,7 @@
     android:background="@color/primary">
 
     <Button
+        android:id="@+id/btnAddContact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/contactslist_button_margin"
