--- a/app/src/main/res/layout/recyclerview_contact_row.xml
+++ b/app/src/main/res/layout/recyclerview_contact_row.xml
@@ -22,18 +22,18 @@
             android:id="@+id/tvFullName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             tools:text="Anton Maurovic"
             android:textSize="@dimen/recyclerviewitem_fullname_fontsize"
-        />
+            />
 
+        <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_favorite_full"
+            android:visibility="invisible"
+            />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/ivFavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite_empty"
-        android:visibility="invisible"
-    />
 
 </androidx.cardview.widget.CardView>
